Fix capturing of background tabs

CopyOutputRequests must be taken from CompositorFrameSinkSupport before
SurfaceAggregator::copy_request_passes_ is populated. This broke at
http://crrev.com/99f8d9a.

Bug: 823393
Cq-Include-Trybots: master.tryserver.chromium.android:android_optional_gpu_tests_rel
Change-Id: I2ee6130e66be5b0a0943df87cd22b40d4e9217c1
Reviewed-on: https://chromium-review.googlesource.com/969503
Commit-Queue: Saman Sami <samans@chromium.org>
Reviewed-by: Fady Samuel <fsamuel@chromium.org>
Reviewed-by: Yuri Wiitala <miu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#544269}
Former-commit-id: 240c7447c670a33fdac023ea317b23bc90807874